Pseudo-Labeling/results/ipslab2013v1_cifar10-4k_23-04-02-20-33.txt
Traceback (most recent call last):
  File "/content/drive/.shortcut-targets-by-id/1rq7ZwO6n9Qq8z-u9Ls5ROqESUr9unPFF/AdversarialAI/Pseudo-Labeling/main.py", line 8, in <module>
    from utils import datasets
  File "/content/drive/.shortcut-targets-by-id/1rq7ZwO6n9Qq8z-u9Ls5ROqESUr9unPFF/AdversarialAI/Pseudo-Labeling/utils/datasets.py", line 144
    print("Debugging:type(labeled_idxs, labeled_idxs[0]))
                                                         ^
SyntaxError: EOL while scanning string literal
